platform/gitops/argocd/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
#  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd
#  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - argocd-gateway
  http:
    - match:
        - uri:
            exact: /argocd
      #        - uri:
      #            prefix: /static
      #        - uri:
      #            exact: /login
      #        - uri:
      #            exact: /logout
      #        - uri:
      #            prefix: /api/v1/products
      route:
        - destination:
            #            host: argocd-server.argocd.svc.cluster.local
            host: argocd-server.argocd.svc.cluster.local
            #            host: prometheus.istio-system.svc.cluster.local
            port:
              number: 8080

#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: example-ingress
#  annotations:
#    #    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /
#spec:
#  rules:
#    - http:
#        paths:
#
#          - pathType: Prefix
#            path: /
#            backend:
#              service:
#                name: argocd-server
#                port:
#                  number: 80
#---
